--- a/Tache3_Analyse_opinion/Transformer/Transformer.ipynb
+++ b/Tache3_Analyse_opinion/Transformer/Transformer.ipynb
@@ -20,29 +20,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: transformers in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (4.28.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (6.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.11.0 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (0.14.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (2023.5.5)\n",
-      "Requirement already satisfied: filelock in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (3.12.0)\n",
-      "Requirement already satisfied: requests in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (2.28.1)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (0.13.3)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (22.0)\n",
-      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (4.65.0)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from transformers) (1.23.5)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (4.4.0)\n",
-      "Requirement already satisfied: fsspec in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (2023.5.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from requests->transformers) (1.26.14)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from requests->transformers) (3.4)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from requests->transformers) (2.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from requests->transformers) (2023.5.7)\n",
-      "Requirement already satisfied: pandas in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (2.0.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from pandas) (1.23.5)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Requirement already satisfied: transformers in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (4.29.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (3.9.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.14.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (0.14.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (1.24.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\imad eddine hajjane\\appdata\\roaming\\python\\python39\\site-packages (from transformers) (2022.10.31)\n",
+      "Requirement already satisfied: requests in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (2.28.1)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (0.13.3)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from transformers) (4.65.0)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from huggingface-hub<1.0,>=0.14.1->transformers) (2023.5.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from huggingface-hub<1.0,>=0.14.1->transformers) (4.4.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from requests->transformers) (2.1.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from requests->transformers) (1.26.13)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from requests->transformers) (2022.12.7)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (4.65.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages (from tqdm) (0.4.6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\imad eddine hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages)\n"
      ]
     }
    ],
@@ -61,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "1f134b60",
    "metadata": {},
    "outputs": [],
@@ -76,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2b47ad2f",
    "metadata": {},
    "outputs": [],
@@ -86,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ec81b70a",
    "metadata": {},
    "outputs": [],
@@ -98,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "53c4d5eb",
    "metadata": {},
    "outputs": [],
@@ -108,10 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0685de83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Imad Eddine Hajjane\\anaconda3\\envs\\pytorch_bert\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
