--- a/Tache4_barre de recherche/ranking_lstm.ipynb
+++ b/Tache4_barre de recherche/ranking_lstm.ipynb
@@ -969,7 +969,7 @@
     }
    ],
    "source": [
-    "model = tf.keras.models.load_model(os.path.join(\"model\",\"LSTM\", \"Model\", \"bidirectional_lstm_NN.h5\"))"
+    "model = tf.keras.models.load_model(os.path.join(\"model\",\"LSTM\", \"Model\", \"bidirectional_lstm_NN_ranking.h5\"))"
    ]
   },
   {
